gcc/testsuite/rust/rustc/ui/const-generics/defaults/param-order-err-pretty-prints-default_dg.rs
struct Foo<const M: usize = 10, 'a>(&'a u32);
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

